--- a/react-social/src/components/sidebar/sidebar.css
+++ b/react-social/src/components/sidebar/sidebar.css
@@ -1,7 +1,19 @@
 .sidebar{
 	flex: 3;
-	height: clac(100vh - 50px);
+	height: calc(100vh - 50px);
 	overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: rgb(179, 179, 179);
 }
 
 .sidebarWrapper{
@@ -21,7 +33,7 @@
 }
 
 .sidebarIcon{
-	margin-right: 15px;
+	margin-right: 15px; 
 }
 
 .sidebarButton{
@@ -48,7 +60,7 @@
 	margin-bottom: 15px;
 }
 
-.sidbarFriendImg{
+.sidebarFriendImg{
 	width: 32px;
 	height: 32px;
 	border-radius: 50%;
