--- a/react-social/src/components/post/post.css
+++ b/react-social/src/components/post/post.css
@@ -29,13 +29,13 @@
 }
 
 .postUsername{
-	font-style: 15px;
+	font-size: 15px;
 	font-weight: 500;
 	margin: 0 10px;
 }
 
 .postDate{
-	font-style: 12px;
+	font-size: 12px;
 }
 
 .postCenter{
