attaching api and react

--- a/social/client/src/pages/login/login.css
+++ b/social/client/src/pages/login/login.css
@@ -63,6 +63,14 @@
 	cursor: pointer;
 }
 
+.loginButton:focus{
+	outline: none;
+}
+
+.loginButton:disabled{
+	cursor: not-allowed;
+}
+
 .loginForget{
 	text-align: center;
 	color: #1775ee;
